# sagittarius-sdk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix  setup.py
cmake/: sagittarius-sdkConfig.cmake.in
examples/: CMakeLists.txt  sagittarius_example.cpp
include/sdk_sagittarius_arm/: modern_robotics.h  sdk_sagittarius_arm_common.h  sdk_sagittarius_arm_common_serial.h  sdk_sagittarius_arm_constants.h  sdk_sagittarius_arm_log.h  sdk_sagittarius_arm_real.h
nix/pkgs/pysagittarius/: default.nix
nix/pkgs/sagittarius-sdk/: default.nix
python/: pysagittarius.cc
src/: modern_robotics.cpp  sagittariusd.cpp  sdk_sagittarius_arm_common.cpp  sdk_sagittarius_arm_common_serial.cpp  sdk_sagittarius_arm_log.cpp  sdk_sagittarius_arm_real.cpp
src/daemon/: CMakeLists.txt  daemon.cpp  daemon.h  protocols.h  sagittariusd.cpp  udp_client.cpp  udp_daemon.cpp  udp_daemon.h
